# generic_validation

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: python.yml
generic_validation/: __init__.py  function_validators.py  generic_validators.py  numerical_validators.py  string_validators.py
src/generic_validation/: __init__.py  callable.py  generic.py  numerical.py  string.py
src/gvalidate/: __init__.py  callable.py  generic.py  numerical.py  string.py
src/gvalidation/: __init__.py  callable.py  generic.py  numerical.py  string.py
tests/: test_callable.py  test_function_validators.py  test_generic.py  test_numerical.py  test_numerical_validators.py  test_string.py  test_string_validators.py  test_validate.py
