[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.portray]
# repo_url = "https://github.com/simphotonics/generic_validation"
extra_markdown_extensions = ["fenced_code", "pymdownx.superfences"]
#output_dir= "doc"

[tool.portray.mkdocs.theme]
custom_dir =  '/home/dan/.local/lib/python3.8/site-packages/portray/mkdocs_templates'
name = 'material'
palette=  {accent= 'lightgreen', primary = 'teal'}
