[metadata]
name = generic_validation
version = 0.0.6
author = D Reschner
author_email = git@simphotonics.com
description = Generic validation decorators.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simphotonics/generic_validation
project_urls =
    Bug Tracker = https://github.com/simphotonics/generic_validation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src